--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 APP_ENV=dev
 APP_SECRET=c69018cd6bab6afef95b5a8c71643e1e
 DATABASE_URL="mysql://nicolas:root@localhost:3306/symfony?serverVersion=5.7"
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
